--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="user-scalable=no,  initial-scale=1,  maximum-scale=1,  width=device-width" />
     <title>PlaybleAds</title>
-    <style>* { padding: 0; margin: 0; }</style>
+    <style>*
+    { padding: 0; margin: 0; }
+
+    </style>
 
     <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
